feat(718): add optional "Use Best-Guess-Location" setting for Immich integration
- Add `useBestGuessLocation` flag to Immich integration model and database
- Update service, repository, and controller logic to handle the new flag
- Modify frontend to include UI control for enabling/disabling the feature
- Ensure photos without location data use the best-guess algorithm when enabled